@@ -35,7 +35,7 @@ Params::Util    = 0
 Sub::Install    = 0
 
 [Prereqs / TestRequires]
-Test::Exception = 0
+Test::Fatal     = 0
 Test::More      = 0.88
 Test::Requires  = 0
 
